--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 			<artifactId>zookeeper</artifactId>
 			<version>3.4.9</version>
 		</dependency>
+		<!--log4j-->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
